diesel_compile_tests/tests/fail/insert_on_conflict_do_update_where_not_supported_on_sqlite.rs
extern crate diesel;

use diesel::query_dsl::methods::FilterDsl;
use diesel::*;

table! {
    users {
        id -> Integer,
    }
}

fn main() {
    let mut connection = SqliteConnection::establish("").unwrap();

    diesel::insert_into(users::table)
        .values(users::id.eq(42))
        .on_conflict(users::id)
        .do_update()
        .set(users::id.eq(42))
        .filter(users::id.eq(45))
        .execute(&mut connection)
        //~^ ERROR: the trait bound `sqlite::backend::SqliteOnConflictClause: SupportsOnConflictClauseWhere` is not satisfied
        .unwrap();
}
